item66 : 네이티브 메서드는 신중히 사용하라